--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ django-cors-headers==3.0.1
 django-heroku==0.3.1
 djangorestframework==3.9.4
 djongo==1.2.32
+dnspython==1.16.0
 gunicorn==19.9.0
+psycopg2==2.8.4
 pymongo==3.8.0
 pytz==2019.1
 sqlparse==0.2.4
 whitenoise==4.1.2
-
